# node_addon_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  b.gyp.back  package.json
addon/: binding.d.ts  template.js
addon/template/: CMakeLists.txt
addon/template/include/template/: Klass.hpp  Worker.hpp  type.hpp  util.hpp
addon/template/src/: Klass.cpp  Worker.cpp  binding.cpp  util.cpp
